# work

./: Afrodita.cpp  Afrodita.hpp  Afrodita.pro  Afrodita.qml  Afrodita.qrc  Body.cpp  Body.hpp  Bone.cpp  Bone.hpp  CMakeLists.txt  Cupboard.cpp  Cupboard.hpp  Doxyfile.cfg  Dummy.qml  English.qm  English.ts  Environment.cpp  Environment.hpp  Eureka.cpp  Eureka.hpp  Eureka.pro  Eureka.qml  Eureka.qrc  Ladybug.cpp  Ladybug.hpp  Ladybug.pro  Ladybug.qml  Ladybug.qrc  Queen.cpp  Queen.hpp  Queen.pri  Queen.pro  Queen.qrc  Regina.cpp  Regina.hpp  Regina.pro  Regina.qml  Regina.qrc  Russian.qm  Russian.ts  (+7 more)
.github/workflow/: chatgpt-access.yml.txt
3party/facebooksdk/: ios-build.sh
3party/ffmpeg/: android-build.sh  gas-preprocessor.pl  ios-build.sh  linux-build.sh  macos-build.sh
3party/ssl/: android-build.sh
3party/tinkoffasdk/: ios-build.sh
Conversation/: CMakeLists.txt  Conversation.cpp  Conversation.hpp  Conversation.pri  Conversation.qrc
Conversation/Data/: Assistant.cpp  Assistant.hpp
Conversation/Meta/: Assist.cpp  Assist.hpp  AssistRender.cpp  AssistRender.hpp  Channel.cpp  Channel.hpp  Message.cpp  Message.hpp  MessageRender.cpp  MessageRender.hpp
Conversation/Model/: AbstractAccident.cpp  AbstractAccident.hpp  AbstractAssist.cpp  AbstractAssist.hpp  AbstractMessage.cpp  AbstractMessage.hpp  Event.cpp  Event.hpp
Conversation/Test/: ConversationTest.cpp  ConversationTest.qrc
Conversation/View/: AssistLayout.cpp  AssistLayout.hpp  AssistView.cpp  AssistView.hpp  ChannelShield.qml  FeedView.qml  MediaCarousel.qml  MediaGrid.qml  MediaList.qml  MessageLayout.cpp  MessageLayout.hpp  MessageView.cpp  MessageView.hpp  qmldir
Core/: CMakeLists.txt  Core.cpp  Core.hpp  Core.pri  Core.qrc
Core/Data/: AbstractCommand.cpp  AbstractCommand.hpp  AbstractEntity.cpp  AbstractEntity.hpp  AbstractExpression.cpp  AbstractExpression.hpp  AbstractPredicate.cpp  AbstractPredicate.hpp  AbstractSetup.cpp  AbstractSetup.hpp  Event.cpp  Event.hpp  Factory.cpp  Factory.hpp  Field.cpp  Field.hpp  ForeignEntity.cpp  ForeignEntity.hpp  ForeignKey.cpp  ForeignKey.hpp  Provider.cpp  Provider.hpp  QueryStream.cpp  QueryStream.hpp  Rowset.cpp  Rowset.hpp
Core/Meta/: AbstractScheme.cpp  AbstractScheme.hpp  Duration.cpp  Duration.hpp  DynamicRole.cpp  DynamicRole.hpp  Filter.cpp  Filter.hpp  Font.cpp  Font.hpp  ITunesItem.cpp  ITunesItem.hpp  MapModel.cpp  MapModel.hpp  ObjectList.cpp  ObjectList.hpp  Order.cpp  Order.hpp  PropertyList.cpp  PropertyList.hpp  Qd.cpp  Qd.hpp  Scheme.cpp  Scheme.hpp  URL.js
Core/Model/: AbstractEvent.cpp  AbstractEvent.hpp  Event.cpp  Event.hpp  MediaInfo.cpp  MediaInfo.hpp  MenuCallback.cpp  MenuCallback.hpp  SortFilterProxyModel.cpp  SortFilterProxyModel.hpp
Core/Net/: AbstractResource.cpp  AbstractResource.hpp  Endpoint.cpp  Endpoint.hpp  ServiceCall.cpp  ServiceCall.hpp
Core/System/: Alert.cpp  Alert.hpp  AudioFile.cpp  AudioFile.hpp  AudioRecorder.cpp  AudioRecorder.hpp  AudioRole.cpp  AudioRole.hpp  AudioStream.cpp  AudioStream.hpp  DiagnosticBundle.cpp  DiagnosticBundle.hpp  FitnessTracker.cpp  FitnessTracker.hpp  ImageThumbnail.cpp  ImageThumbnail.hpp  Native.cpp  Native.hpp  NotificationCenter.cpp  NotificationCenter.hpp  NotificationService.cpp  NotificationService.hpp  Preference.cpp  Preference.hpp  UserTracker.cpp  UserTracker.hpp
Core/Test/: AbstractCase.cpp  AbstractCase.hpp  AbstractShocker.cpp  AbstractShocker.hpp  Assert.cpp  Assert.hpp  Context.cpp  Context.hpp  CoreTest.cpp  Node.cpp  Node.hpp  PetrI.cpp  PetrI.hpp  Token.cpp  Token.hpp
Core/View/: AccountInput.qml  ActionButton.qml  AlertDialog.cpp  AlertDialog.hpp  CallbackDelegate.qml  Camera.qml  Dashboard.qml  DiagnosticCollector.qml  FileDialog.qml  ImageViewer.qml  MultimediaPlayer.qml  PDFViewer.qml  PinInput.qml  PopupAlert.qml  ProgressCircle.cpp  ProgressCircle.hpp  ProgressPie.qml  StackBar.qml  StateIsland.cpp  StateIsland.hpp  StatusBar.cpp  StatusBar.hpp  TextareaDelegate.qml  Theme.cpp  Theme.hpp  WebView.qml  WindowManager.cpp  WindowManager.hpp  qmldir
DrOblozhko/: DrOblozhko.cpp  DrOblozhko.hpp  DrOblozhko.pri  DrOblozhko.qrc
DrOblozhko/Meta/: Translation.cpp  Translation.hpp
DrOblozhko/Model/: Appointment.cpp  Appointment.hpp
DrOblozhko/Test/: DrOblozhkoTest.cpp
DrOblozhko/View/: Patient.qml  Splash.qml  Tour.qml  qmldir
EC/: CMakeLists.txt  EC.cpp  EC.hpp  EC.pri  EC.qrc
EC/Data/: Basket.cpp  Basket.hpp  Showcase.cpp  Showcase.hpp  Stock.cpp  Stock.hpp
EC/Meta/: CustomerAccount.cpp  CustomerAccount.hpp  InappReceipt.cpp  InappReceipt.hpp
EC/Model/: AbstractAcquirer.cpp  AbstractAcquirer.hpp
ERP/: CMakeLists.txt  ERP.cpp  ERP.hpp  ERP.pri  ERP.qrc
ERP/Model/: AbstractDocument.cpp  AbstractDocument.hpp
ERP/View/: qmldir
Mentalgami/: CMakeLists.txt  Mentalgami.cpp  Mentalgami.hpp  Mentalgami.pri  Mentalgami.qrc
Mentalgami/Asset/: E164CountryCodeSet.xml
Mentalgami/Data/: RiddleList.cpp  mg_RiddleList.cpp  (+1 more)
Qaos/: AtomicEnum.hpp  String.cpp  String.hpp
Repository/: CMakeLists.txt  Repository.cpp  Repository.hpp  Repository.pri  Repository.qrc
SD/: CMakeLists.txt  SD.cpp  SD.hpp  SD.pri  SD.qrc
SmartCare/: CMakeLists.txt  SmartCare.cpp  SmartCare.hpp  SmartCare.pri  SmartCare.qrc
Stress/: CMakeLists.txt  Stress.cpp  Stress.hpp  Stress.pri  Stress.qrc
afrodita.android/: AndroidManifest.xml  agconnect-services.json  google-services.json  gradlew
afrodita.ios-asset/: AfroditaLauncher.xib  Development.entitlements  Info.plist  Production.entitlements
eureka.android/: AndroidManifest.xml  agconnect-services.json  google-services.json
eureka.ios-asset/: EurekaLauncher.xib  Info.plist
ladybug.android/: AndroidManifest.xml  agconnect-services.json  build.gradle  google-services.json
ladybug.ios-asset/: Info.plist  LadybugLauncher.xib
ladybug.linux/: queen-ladybug.desktop
regina.android/: AndroidManifest.xml  build.gradle  google-services.json  gradlew.bat
regina.ios-asset/: Info.plist  ReginaLauncher.xib
vanilla.android/: AndroidManifest.xml  google-services.json
vanilla.ios-asset/: Info.plist  VanillaLauncher.xib
(+1090 files in other folders)
